[package]
name = "portableid-parachain"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0" }
scale-info = { version = "2.0", features = ["derive"] }
frame-support = { version = "28.0" }
frame-system = { version = "28.0" }
sp-core = { version = "28.0" }
sp-runtime = { version = "31.0" }
sp-std = { version = "14.0" }

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "sp-runtime/std",
]